# findcode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ext.cpp  search.cpp
file/: File.h
stringlib/: fastsearch.hpp
taskpool/: Async.h  CMakeLists.txt  InternalTask.cpp  InternalTask.h  ParallelFor.cpp  ParallelFor.h  ParallelSort.h  README  Semaphore.h  SpinMutex.h  TaskPool.cpp  TaskPool.h  Types.h  WorkerThread.cpp  WorkerThread.h
